# ai-system-framework

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
notebooks/employment_task_user_flow/: independence_plots.ipynb  overall_plots.ipynb  separation_plots.ipynb  stats_tests.ipynb  sufficiency_plots.ipynb  training_performance.ipynb
notebooks/income_task_user_flow/: independence_plots.ipynb  overall_plots.ipynb  separation_plots.ipynb  stats_tests.ipynb  sufficiency_plots.ipynb  training_performance.ipynb
src/: acs.py  metrics.py  model.py
src/acs_baseline/: acs_pipeline_functions.py  data_utils.py
src/algorithms/: eq_odds_postprocessing.py
src/dags/: acs_employment_pipeline.py  acs_income_pipeline.py  acs_publi_cov_pipeline.py  local_pipeline.py
src/interventions/: chouldechova2016.py  hardt2016.py  kamiran_calders2012.py  pleiss2017.py  utils.py
src/utils/: acs_pipeline_functions.py  dags_utils.py  data_helper.py  data_utils.py  helper.py  plots.py
